// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate output agenda.test.md 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
PRODID:-txt2ics
METHOD:PUBLISH
BEGIN:VEVENT
UID:lsxN2Tl9fO-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;VALUE=DATE:19690106
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
RRULE:FREQ=MONTHLY;BYDAY=1MO
SUMMARY:Pay rent 🏠
END:VEVENT
BEGIN:VEVENT
UID:cP8oqLsvWg-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART:19690111T120000
RRULE:FREQ=WEEKLY;INTERVAL=2;BYDAY=SA
SUMMARY:Lunch with Buzz 🍕
LOCATION:Luigi's Pizza
END:VEVENT
BEGIN:VEVENT
UID:SeGcZIWPDA-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;VALUE=DATE:19690225
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
RRULE:FREQ=YEARLY
SUMMARY:George's Birthday 🎂
END:VEVENT
BEGIN:VEVENT
UID:kEZgStlXvG-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;VALUE=DATE:19690618
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
RRULE:FREQ=YEARLY
SUMMARY:Paul's Birthday 🎂
END:VEVENT
BEGIN:VEVENT
UID:Mwa6AcpcMW-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;VALUE=DATE:19690707
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
RRULE:FREQ=YEARLY
SUMMARY:Ringo's Birthday 🎂
END:VEVENT
BEGIN:VEVENT
UID:vtI41BBoNS-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;VALUE=DATE:19691009
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
RRULE:FREQ=YEARLY
SUMMARY:John's Birthday 🎂
END:VEVENT
BEGIN:VEVENT
UID:6MfvOQxamH-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART:19690212T090000
DTEND:19690212T100000
SUMMARY:Dentist appointment 🦷
DESCRIPTION:Remember to ask doctor about braces
END:VEVENT
BEGIN:VEVENT
UID:YPPHHm2oAJ-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;VALUE=DATE:19690415
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
SUMMARY:Date with Uncle Sam 🇺🇸
END:VEVENT
BEGIN:VEVENT
UID:rPe8Or8wCw-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART:19690814T200000
SUMMARY:Bus to New York 🚌
END:VEVENT
BEGIN:VEVENT
UID:YOuocpMNMd-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;VALUE=DATE:19690815
DTEND;VALUE=DATE:19690818
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
SUMMARY:Woodstock Festival 🎸
END:VEVENT
BEGIN:VEVENT
UID:5ps7RneblV-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;VALUE=DATE:19691224
DTEND;VALUE=DATE:19691231
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
SUMMARY:Christmas vacation 🎄
END:VEVENT
BEGIN:VEVENT
UID:gWYXyo3eP0-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;VALUE=DATE:19700101
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
SUMMARY:Quit drinking 🚫🍺
END:VEVENT
END:VCALENDAR"
`;

exports[`Validate output recurring.test.md 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
PRODID:-txt2ics
METHOD:PUBLISH
BEGIN:VEVENT
UID:5EMPhYPhRt-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART:19990105T150000
DTEND:19990105T170000
RRULE:FREQ=WEEKLY;BYDAY=TU,TH
SUMMARY:Scruffy's Sponge Bath 🧼
DESCRIPTION:Give Scruffy a sponge bath
END:VEVENT
BEGIN:VEVENT
UID:lSoagLyTxN-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;VALUE=DATE:19990129
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
RRULE:FREQ=MONTHLY;BYDAY=-1FR
SUMMARY:Send Scruffy an Invoice 📄
DESCRIPTION:Send Scruffy an invoice on the last Friday of each month
END:VEVENT
BEGIN:VEVENT
UID:gW2iPzwYn8-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;VALUE=DATE:19990104
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
RRULE:FREQ=WEEKLY;INTERVAL=2;BYDAY=MO
SUMMARY:Ask Scruffy for a Promotion 💼
DESCRIPTION:Ask Scruffy for a promotion every other Monday
END:VEVENT
END:VCALENDAR"
`;

exports[`Validate output simple.test.md 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
PRODID:-txt2ics
METHOD:PUBLISH
BEGIN:VEVENT
UID:Y4yYBnyftq-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;VALUE=DATE:20070124
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
SUMMARY:Fix the kitchen sink 🔧
END:VEVENT
BEGIN:VEVENT
UID:qXiUId8oWx-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;VALUE=DATE:20070210
DTEND;VALUE=DATE:20070212
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
SUMMARY:Buy flowers 💐
LOCATION:5th and 42nd st
DESCRIPTION:Buy flowers at that florist that hangs out on 5th and 42nd st.
END:VEVENT
END:VCALENDAR"
`;

exports[`Validate output timezones.test.md 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
PRODID:-txt2ics
METHOD:PUBLISH
BEGIN:VEVENT
UID:pYomY9spkk-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;TZID=America/New_York:20240704T160000
SUMMARY:Party 🎉
END:VEVENT
BEGIN:VEVENT
UID:O6R7iCOGV7-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;TZID=America/Sao_Paulo:20240907T110000
SUMMARY:Samba class 💃
LOCATION:Rio
END:VEVENT
BEGIN:VEVENT
UID:3oOclDUHSw-0
SEQUENCE:0
DTSTAMP:19700101T000000Z
DTSTART;TZID=Europe/London:20241226T190000
SUMMARY:Boxing Day mass ⛪
END:VEVENT
END:VCALENDAR"
`;
